<resources>
    <string name="app_name">Automatic Call Recorder Pro</string>

    <!--<string name="ad_unit_id">ca-app-pub-3940256099942544/2177258514</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a nulla non purus pharetra rhoncus.
        Phasellus fringilla consectetur pharetra. Nullam lacus velit,
        imperdiet vel odio sed, pretium porttitor nibh. Nam vel eleifend purus, eu luctus ligula.
        Mauris eu diam diam. Sed nulla ligula, porttitor ac velit in, interdum lobortis neque.
        Aliquam hendrerit justo massa, sit amet pellentesque velit volutpat a.
        Maecenas at dapibus massa. Nam in efficitur elit,
        sed interdum enim. Nullam lorem quam, mollis quis velit ac, lacinia pulvinar felis.
    </string>
    <string name="search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Speaker Mic</item>
        <item>Mic</item>
        <item>Voice Commmunication</item>
        <item>Voice Recogintion</item>
        <item>Voice Call</item>
        <item>Camcorder</item>
    </string-array>
    <string-array name="pref_saving_recording_options">
        <item>Automatically save</item>
        <item>Don\'t save</item>
        <item>Ask after every call</item>
        <item>Shake to record</item>
    </string-array>
    <string-array name="pref_recording_quality_options">
        <item>Very High</item>
        <item>Normal(Recommended)</item>
    </string-array>
    <string-array name="pref_upload_to_cloud_options">
        <item>Don\'t Auto Upload to cloud</item>
        <item>Always</item>
        <item>Only via Wi-Fi</item>
        <item>Only via Mobile Data</item>
    </string-array>
    <string-array name="pref_upload_to_cloud_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_save_recording_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_recording_quality_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="search_hint">enter number or name</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open Menu drawer</string>
    <string name="navigation_drawer_close">Close Menu drawer</string>
    <string name="facebook_app_id">146218856101206</string>
    <string name="recording_turned_on">Recording turned On</string>
    <string name="recording_turned_off">Recording turned Off</string>
    <string name="added_to_favourites">Added to Favourites</string>
    <string name="removed_from_favourites">Removed from Favourites</string>
    <string name="recording_deleted">Recording deleted successfully</string>
    <string name="recording_deletion_failed">Deletion failed</string>
    <string name="enter_four_digit_pin">Enter 4 digit pin</string>
    <string name="pin_mismatch">Pin mismatch</string>
    <string name="incorrect_pin">Incorrect Pin</string>
    <string name="pin_updated">Pin updated successfully</string>
    <string name="pin_saved">Pin saved successfully</string>
    <string name="records_refreshed">Records refreshed</string>
    <string name="add_to_favourites_text">Add to Favourites</string>
    <string name="remove_favourites_text">Remove from Favourites</string>
    <string name="settings_option_save_recording">Saving Options</string>
    <string name="settings_option_recording_quality">Recording Quality</string>
    <string name="settings_option_upload_to_cloud">Upload To Cloud</string>
    <string name="shared_pref_saving_pref_key">SAVE_OPTIONS</string>
    <string name="shared_pref_recording_quality_pref_key">RECORDING_QUALITY</string>
    <string name="shared_pref_upload_to_cloud_pref_key">UPLOAD_TO_CLOUD</string>
    <string name="question_save_recording">Do you want to save the recording?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="navigation_drawer_faq">FAQ\'s</string>
    <string name="action_menu_select_all">Select All</string>
    <string name="recording_saved">Recording saved successfully</string>
    <string name="recording_not_saved">Recording not saved</string>
    <string name="recording_started">Recording saved successfully</string>
    <string name="error_while_uploading_to_cloud">An Error occurred while connecting to Cloud.Please Try Again.</string>
    <string name="add_to_protected_mode">Add app to protected mode?</string>
    <string name="add_to_protected_mode_positive">Add</string>
    <string name="add_to_protected_mode_negative">Cancel</string>
    <string name="protected_mode_title">Protected Mode</string>
    <string name="please_set_pin">Please set up Pin</string>

    <string name="action_settings">Settings</string>
    <string name="recoring_issue">Please remove any other call recording apps and apply setting from the setting option.Apply setting to change various audio source.
    If default option does not work choose speaker option which gaurentees your call record.</string>
    <string name="issue_2">Some phones don\'t support call recording regardless the setting you apply.But you can still choose speaker with mic option to record call.</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_faq">FAQ\'s</string>


    <string name="faq_content"><b>Q: Why doesn\'t Call Recorder record calls or randomly record calls?</b>\n\n
Android 6.0 and later versions have a Battery Optimization function. To decrease battery consumption system
        can add the CallRecorder into the deactivated state and it looks like app records randomly or does not record any calls.\n

The problem can be resolved by changing Battery Optimization related settings in your phone. The location of the Settings depends on the phone Model:
Common Android phones:\n

Go to Phone Settings > Battery > Battery Optimization screen, set Call Recorder to “Not Optimized”.\n
Huawei phones it can be:\n

Go to Phone Settings > Power Saving > Protected Apps screen, set Call Recorder to “Protected App”.\n
or Go to Phone Settings > Phone Manager > Protected Apps screen, set Call Recorder to “Protected App”.\n
or Go to Phone Settings > Apps > Advanced > Ignore Optimizations screen, set Call Recorder to “Ignore Optimizations”.\n
HTC phones:\n

Go to Phone Settings > Power > Battery Optimization screen, set Call Recorder to “Don\’t Optimize”.\n
Samsung phones:\n

Go to Phone Settings > Smart Manager > Battery > App Optimization > Detail screen, set Call Recorder to “Disabled”.\n
Also some third-party apps are very powerful that can prevent other apps working, such as Clean Master, App Manager, Task Manager,  Battery Optimizer, Greenify, Privacy Guard, etc. These apps prevent Call Recorder working, as a result some of your calls will not be recorded. Please don’t allow them block Call Recorder doing it’s job, usually you need to add Call Recorder into their “White List” or uninstall.\n\n
        <b>Q: Why doesn\'t Call Recorder record long calls?</b>\n\n
        It is usually happened for the devices with low RAM memory where the Android system kills
        recording service because of not enough memory.\n

Go to the app Settings -> Notifications and enable -> Recording notification (show notification during recording) = ON\n\n

Recording service now should not be killed by the system.

The other reason can be not enough storage memory in the phone.\n\n
        <b>Q: Where are the recordings saved?</b>\n\n
        Although, You can select the directory from the Settings screen.A directory named CallRecorder will be created in that directory which will contain all your recordings.
        By default, the recordings are stored in SD card in the directory CallRecorder.\n\n

        <b>Q: &quot; \" I lost my phone&quot; \" or &quot; \"Phone had a factory reset&quot; \" or &quot; \"I deleted some recordings&quot; \".
            Is it possible to restore the recordings?</b>\n\n
        To restore the recordings to Cloud go to :\n\n
        Settings -> Upload To Cloud \n\n
        Select the preferred option\n\n
        Or otherwise, to Upload a particular recording, you may tap on the recording and from the menu select &quot;\"Upload To Cloud&quot;\"\n\n
        <b>Q: How to Enable/Disable Pin Lock?</b>\n\n
        Please go to Settings -> Pin Lock \n\n
        From the switch you can Enable/Disable Pin Lock.\n\n
    </string>

</resources>
