<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="LOCK"
        android:summary="Enable Pin Lock "
        android:title="Pin Lock" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <Preference
        android:key="DIRECTORY"
        android:summary="Directory to store recording"
        android:title="Choose Directory" />
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="RECORDER"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Select Recording Source" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_saving_recording_options"
        android:entryValues="@array/pref_save_recording_list_values"
        android:key="@string/shared_pref_saving_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_option_save_recording" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_recording_quality_options"
        android:entryValues="@array/pref_recording_quality_list_values"
        android:key="@string/shared_pref_recording_quality_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_option_recording_quality" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_upload_to_cloud_options"
        android:entryValues="@array/pref_upload_to_cloud_list_values"
        android:key="@string/shared_pref_upload_to_cloud_pref_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_option_upload_to_cloud" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="NOTIFY"
        android:title="Enable Notification" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="UNLIMITED"
        android:title="Unlimited Recordings"
        android:summary="Disable to limit recordings to 300 only except for favourite contacts." />
</PreferenceScreen>
